--- a/ch2_7/README.adoc
+++ b/ch2_7/README.adoc
@@ -7,7 +7,7 @@ There are inevitably cases where you will have a hard time avoiding blocking cod
 == The executeBlocking operation
 The  other  option  for  running  blocking  code  is  to  use  the executeBlocking method from the Vertx class. This method takes some blocking code to execute, off- loads it to a worker thread, and sends the result back to the event loop as a new event
 
-image::1.png[]
+image::1.PNG[]
 
 == TIP
 By  default,  successive executeBlocking  operations  have  their  results processed in the same order as the calls to executeBlocking. There is a vari- ant of executeBlocking with an additional boolean parameter, and when it’s set to false, results are made available as event-loop events as soon as they are available, regardless of the order of the executeBlocking calls
